--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vendor-app",
-  "version": "0.0.0",
+  "productName": "vendor-app",
+  "version": "1.0.0",
   "main": "main.js",
   "scripts": {
     "ng": "ng",
@@ -9,7 +10,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start:electron": "ng build --base-href ./ && electron ."
+    "start:electron": "ng build --base-href ./ && electron .",
+    "electron": "electron .",
+    "electron-build": "ng build --prod && npm run electron .",
+    "dist": "electron-packager . vendor-app --platform=darwin"
   },
   "private": true,
   "dependencies": {
@@ -24,9 +28,11 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "electron-packager": "^15.2.0",
     "hammerjs": "^2.0.8",
     "ngx-electron": "^2.2.0",
     "rxjs": "~6.3.3",
+    "save-dev": "0.0.1-security",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
